[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pypatch"
version = "1.0.0"
description = "An RL environment where AI agents debug and fix buggy Python code."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Anurag Kumar Singh" }
]
dependencies = [
  "fastapi==0.111.0",
  "uvicorn==0.29.0",
  "pydantic==2.7.1",
  "openai>=2.7.2",
  "openenv-core>=0.2.0",
  "httpx==0.27.0",
  "python-multipart==0.0.9",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = ["main", "models", "tasks", "inference", "validate"]

[tool.setuptools.packages.find]
include = ["server*"]
